// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rollup > basic.js 1`] = `
"// basic.js
var basic = \`import '@rollup/pluginutils'
import 'js-tokens'
import 'pkg-types'
import 'unplugin'
\`;

export { basic as default };
"
`;

exports[`rollup > error.js 1`] = `
[Error: Unused dependencies found!
Dependencies: js-tokens
You can remove them from #CWD#/package.json]
`;

exports[`rollup > error-comment.js 1`] = `
[Error: Unused dependencies found!
Dependencies: @rollup/pluginutils, js-tokens, pkg-types
You can remove them from #CWD#/package.json]
`;

exports[`rollup > error-tsx.tsx 1`] = `
[Error: Unused dependencies found!
Dependencies: unplugin
You can remove them from #CWD#/package.json]
`;

exports[`rollup > error-vue.vue 1`] = `
[Error: Unused dependencies found!
Dependencies: @rollup/pluginutils, js-tokens, pkg-types
You can remove them from #CWD#/package.json]
`;
